2008-02-03  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Dom.Parser, MonoDevelop.Dom.Parser/AbstractParser.cs,
	  MonoDevelop.Dom.Parser/ProjectParserService.cs,
	  MonoDevelop.Dom.Parser/IParser.cs, MonoDevelop.Dom.Parser/ProjectDom.cs,
	  MonoDevelop.Dom.Output, MonoDevelop.Dom.Output/Ambience.cs,
	  MonoDevelop.Dom.Output/NetAmbience.cs, MonoDevelop.Dom/DomType.cs,
	  MonoDevelop.Dom/ClassType.cs, MonoDevelop.Dom/ICompilationUnit.cs,
	  MonoDevelop.Dom/IType.cs: Added simple dom parser infrastructure.
	* MonoDevelop.Ide.Gui/ProjectOperations.cs: Parser database is now loaded on
	  demand (slightly improving startup speed).

2008-02-02  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Dom: Added a new dom layer (currently unused - will be for a
	  while, I need somithing to test out the new managed text editor).

2008-01-29  Michael Hutchinson <mhutchinson@novell.com> 

	* icons/navigate-next.png:
	* icons/navigate-previous.png: Pad to 24px so that MD's toolbar 
	  doesn't stretch them.
	  
	* MonoDevelop.Ide.Gui.Dialogs/SharpDevelopAboutPanels.cs: Update 
	  copyright year to 2008.

2008-01-29  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* MonoDevelop.Ide.Gui.Dialogs/GotoLineDialog.cs: Small workaround to be able
	  to build in mono 1.2.4 (mono 1.2.4 ignores usings in anon delegates).

2008-01-28  Mike Krüger <mkrueger@novell.com> 

	

2008-01-28  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Commands/TextEditorCommands.cs,
	  MonoDevelop.Ide.Commands/SearchCommands.cs,
	  MonoDevelop.Ide.Gui.Dialogs/GotoLineDialog.cs,
	  MonoDevelop.Ide.addin.xml, MonoDevelop.Ide.Gui/ViewCommandHandlers.cs,
	  MonoDevelop.Ide.Gui/TextEditor.cs: Moved some text editor commands to
	  the ide: bookmarks, goto line number and goto matching brace.

2008-01-25  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.addin.xml: Update MD version.

2008-01-23  Lluis Sanchez Gual <lluis@novell.com> 
