@@ -374,6 +374,7 @@
     <File name="MonoDevelop.Dom.Parser/ProjectParserService.cs" subtype="Code" buildaction="Compile" />
     <File name="MonoDevelop.Dom.Parser/IParser.cs" subtype="Code" buildaction="Compile" />
     <File name="MonoDevelop.Dom.Parser/AbstractParser.cs" subtype="Code" buildaction="Compile" />
+    <File name="MonoDevelop.Ide.Gui.Content/ISplittable.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="False" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
