@@ -1,5 +1,12 @@
 2008-02-03  Mike Krüger <mkrueger@novell.com> 
 
+	* MonoDevelop.Ide.Gui.Content/ISplittable.cs,
+	  MonoDevelop.Ide.Commands/WindowCommands.cs, MonoDevelop.Ide.addin.xml,
+	  MonoDevelop.Ide.Gui/ViewCommandHandlers.cs: Added splitting
+	  infrastructure.
+
+2008-02-03  Mike Krüger <mkrueger@novell.com> 
+
 	* MonoDevelop.Dom.Parser, MonoDevelop.Dom.Parser/AbstractParser.cs,
 	  MonoDevelop.Dom.Parser/ProjectParserService.cs,
 	  MonoDevelop.Dom.Parser/IParser.cs, MonoDevelop.Dom.Parser/ProjectDom.cs,
